default/objects/success__Coaching_Plan__c/success__Coaching_Plan__c.object-meta.xml
<CustomObject>
    <description>Coaching Plans can be created and assigned to users that contain objectives which should be completed within a specified period. A Coaching Plan may be created to track objectives as part of an annual review, or to achieve a specific goal, such as improving the sales pipeline.</description>
    <label>Coaching Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coaching Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>