default/objects/success__Coaching_Plan__c/fields/success__End_Date__c.field-meta.xml
<CustomField>
    <fullName>success__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>