default/objects/success__Coaching_Plan__c/fields/success__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>success__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>