default/objects/success__Coaching_Plan__c/fields/success__State__c.field-meta.xml
<CustomField>
    <fullName>success__State__c</fullName>
    <formula>IF(TODAY()&gt;success__End_Date__c,&#39;Finished&#39;,
IF(TODAY()&lt;success__Start_Date__c,&#39;Scheduled&#39;,

IF(and(ISBLANK(success__Start_Date__c), ISBLANK(success__End_Date__c)), &#39;Draft&#39;, &#39;Running&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>