default/objects/success__Coaching_Plan__c/fields/success__User__c.field-meta.xml
<CustomField>
    <fullName>success__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Coaching_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>