default/objects/success__Coaching_Plan__c/validationRules/success__A_user_must_be_assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>success__A_user_must_be_assigned</fullName>
    <active>true</active>
    <errorConditionFormula>success__User__c == null</errorConditionFormula>
    <errorMessage>The user field must be populated</errorMessage>
</ValidationRule>