default/objects/success__Coaching_Plan__c/validationRules/success__Date_validations.validationRule-meta.xml
<ValidationRule>
    <fullName>success__Date_validations</fullName>
    <active>true</active>
    <description>Start and End date must be present, or neither present</description>
    <errorConditionFormula>IF(and(not(ISBLANK(success__End_Date__c)),ISBLANK(success__Start_Date__c)), true, IF(and(not(ISBLANK(success__Start_Date__c)),ISBLANK(success__End_Date__c)), true, false))</errorConditionFormula>
    <errorMessage>Please make sure both End and Start date are filled.</errorMessage>
</ValidationRule>