default/objects/success__Coaching_Plan__c/validationRules/success__Name_must_be_present.validationRule-meta.xml
<ValidationRule>
    <fullName>success__Name_must_be_present</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorMessage>Please enter a name for this record</errorMessage>
</ValidationRule>