default/objects/success__Coaching_Plan__c/validationRules/success__Start_Date_cannot_be_after_the_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>success__Start_Date_cannot_be_after_the_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>success__Start_Date__c &gt; success__End_Date__c</errorConditionFormula>
    <errorMessage>The start date must be before the end date</errorMessage>
</ValidationRule>