default/objects/success__Coaching_Plan__c/listViews/success__All.listView-meta.xml
<ListView>
    <fullName>success__All</fullName>
    <columns>NAME</columns>
    <columns>success__User__c</columns>
    <columns>success__Description__c</columns>
    <columns>success__State__c</columns>
    <columns>success__Start_Date__c</columns>
    <columns>success__End_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>